--- a/menu.html
+++ b/menu.html
@@ -153,38 +153,38 @@
         <hr>
         <div class="container-menu">
             <div class="pietanza">
-                <p><b><span class="color-pietanza">Marinara</span> <span class="color-pietanza">4,00€</span></b></p>
-                <p>Pomodoro, origano, aglio acciughe olive</p>
+                <p><b><span>Marinara</span> <span>4,00€</span></b></p>
+                <p><span class="color-pietanza">Pomodoro, origano, aglio acciughe olive</span></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span class="color-pietanza">Cosacca</span> <span class="color-pietanza">4,50€</span></b></p>
-                <p>Pomodoro, parmigiano grattuggiato, basilico e olio evo</p>
+                <p><b><span>Cosacca</span> <span>4,50€</span></b></p>
+                <p><span class="color-pietanza">Pomodoro, parmigiano grattuggiato, basilico e olio evo</span></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span class="color-pietanza">Margherita</span><span class="color-pietanza">4,50€</span></b></p>
-                <p>Pomodoro, mozzarella, basilico e olio evo</p>
+                <p><b><span>Margherita</span><span>4,50€</span></b></p>
+                <p><span class="color-pietanza">Pomodoro, mozzarella, basilico e olio evo</span></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span class="color-pietanza">Diavola</span><span class="color-pietanza">6,00€</span></b></p>
-                <p>Pomodoro, spianata piccante, mozzarella, basilico e olio evo</p>
+                <p><b><span>Diavola</span><span>6,00€</span></b></p>
+                <p><span class="color-pietanza">Pomodoro, spianata piccante, mozzarella, basilico e olio evo</span></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span class="color-pietanza">Provola e Pepe</span> <span class="color-pietanza">6,00€</span></b></p>
-                <p>Pomodoro, provola, pepe, basilico e olio evo</p>
+                <p><b><span>Provola e Pepe</span> <span>6,00€</span></b></p>
+                <p><span class="color-pietanza">Pomodoro, provola, pepe, basilico e olio evo</span></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span class="color-pietanza">Bufalina</span><span class="color-pietanza">6,50€</span></b></p>
-                <p>Pomodoro, mozzarella di bufala, basilico e olio evo</p>
+                <p><b><span>Bufalina</span><span>6,50€</span></b></p>
+                <p><span class="color-pietanza">Pomodoro, mozzarella di bufala, basilico e olio evo</span></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span class="color-pietanza">Capricciosa</span><span class="color-pietanza">7,50€</span></b></p>
-                <p>Pomodoro, carciofi, olive, salame, prosciutto cotto, funghi, basilico e olio evo</p>
+                <p><b><span>Capricciosa</span><span>7,50€</span></b></p>
+                <p><span class="color-pietanza">Pomodoro, carciofi, olive, salame, prosciutto cotto, funghi, basilico e olio evo</span></p>
             </div>
             <br>
             <div class="pietanza">
