--- a/menu.html
+++ b/menu.html
@@ -51,11 +51,11 @@
                 </div>
                 <br>
                 <div class="pietanza">
-                    <p><b><span>Polpettine rapa e patate con fonduta di caciocavallo</span> <span>3pz 5,00€- 5pz 7,00€</span></b></p>
+                    <p><b><span>Polpettine rapa e patate con fonduta di caciocavallo</span><span>3pz 5,00€ / 5pz 7,00€</span></b></p>
                 </div>
                 <br>
                 <div class="pietanza">
-                    <p><b><span>Polpettine bacon e provola con fonduta di caciocavallo</span> <span>3pz 5,00€- 5pz 7,00€</span></b></p>
+                    <p><b><span>Polpettine bacon e provola con fonduta di caciocavallo</span> <span>3pz 5,00€ / 5pz 7,00€</span></b></p>
                 </div>
                 <br>
                 <div class="pietanza">
