--- a/menu.html
+++ b/menu.html
@@ -193,7 +193,7 @@
             <br>
             <div class="pietanza">
                 <p><b><span>Americana</span><span>7,00€</span></b></p>
-                <p><span class="color-pietanza">Mozzarella , wurstel, patatine, basilico e olio evo</span></p>
+                <p><span class="color-pietanza">Mozzarella , pomodoro, wurstel, patatine, basilico e olio evo</span></p>
             </div>
             <br>
              <div class="pietanza">
