--- a/menu.html
+++ b/menu.html
@@ -346,7 +346,7 @@
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Bresaola rucola e scaglie diㅤ parmigiano</span> <span>8,00€</span></b></p>
+                <p><b><span>Bresaola mozzarella rucola e scaglie diㅤ parmigiano</span> <span>8,00€</span></b></p>
             </div>
             <br>
             <div class="pietanza">
