--- a/menu.html
+++ b/menu.html
@@ -208,7 +208,7 @@
             <br>
              <div class="pietanza">
                 <p><b><span>Ortolana</span><span>7,00€</span></b></p>
-                <p><span class="color-pietanza">Peperoni, melanzane, mozzarella, basilico e olio evo</span></p>
+                <p><span class="color-pietanza">Peperoni, zucchine, melanzane, mozzarella, basilico e olio evo</span></p>
             </div>
             <br>
              <div class="pietanza">
