--- a/menu.html
+++ b/menu.html
@@ -60,6 +60,10 @@
                 </div>
                 <br>
                 <div class="pietanza">
+                    <p><b><span>Frittatina classica </span> <span>3,00€</span></b></p>
+                </div>
+                <br>
+                <div class="pietanza">
                     <p><b><span>Frittatina cacio e pepe </span> <span>3,00€</span></b></p>
                 </div>
                 <br>
