--- a/menu.html
+++ b/menu.html
@@ -146,7 +146,7 @@
             </div>
             <br>
             <div class="pietanza">
-                <p><span class="color-pietanza">- Crema tartufo e porcini</span></p>
+                <p><span class="color-pietanza">- Crema di tartufo e porcini</span></p>
             </div>
         </div>
     </div>
@@ -162,7 +162,7 @@
             <br>
             <div class="pietanza">
                 <p><b><span>Marinara</span> <span>4,00€</span></b></p>
-                <p><span class="color-pietanza">Pomodoro, origano, aglio acciughe olive</span></p>
+                <p><span class="color-pietanza">Pomodoro, origano, aglio, acciughe, olive</span></p>
             </div>
             <br>
             <div class="pietanza">
