--- a/menu.html
+++ b/menu.html
@@ -180,6 +180,11 @@
                 <p><span class="color-pietanza">Pomodoro, spianata piccante, mozzarella, basilico e olio evo</span></p>
             </div>
             <br>
+              <div class="pietanza">
+                <p><b><span>Siciliana</span><span>6,00€</span></b></p>
+                <p><span class="color-pietanza">Pomodoro, mozzarella,melanzane basilico e olio evo</span></p>
+            </div>
+            <br>
             <div class="pietanza">
                 <p><b><span>Provola e Pepe</span> <span>6,00€</span></b></p>
                 <p><span class="color-pietanza">Pomodoro, provola, pepe, basilico e olio evo</span></p>
