--- a/menu.html
+++ b/menu.html
@@ -297,7 +297,7 @@
             <br>
             <div class="pietanza">
                 <p><b><span>Anthony</span><span>8,00€</span></b></p>
-                <p><span class="color-pietanza">Pomodoro, mozzarella, melanzane fritte, fonduta di parmigiano, basilico e olio evo</span></p>
+                <p><span class="color-pietanza">Provola,patate al forno,salsiccia funghi champignon</span></p>
             </div>
             <br>
             <div class="pietanza">
