--- a/menu.html
+++ b/menu.html
@@ -165,6 +165,11 @@
                 <p><span class="color-pietanza">Pomodoro, origano, aglio, acciughe, olive</span></p>
             </div>
             <br>
+              <div class="pietanza">
+                <p><b><span>Napoletana</span> <span>4,00€</span></b></p>
+                <p><span class="color-pietanza">Pomodoro, origano, aglio, olio evo</span></p>
+            </div>
+            <br>
             <div class="pietanza">
                 <p><b><span>Cosacca</span> <span>4,50€</span></b></p>
                 <p><span class="color-pietanza">Pomodoro, parmigiano grattuggiato, basilico e olio evo</span></p>
@@ -296,7 +301,7 @@
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Anthony</span><span>8,00€</span></b></p>
+                <p><b><span>Anthony</span><span>9,00€</span></b></p>
                 <p><span class="color-pietanza">Provola,patate al forno,salsiccia funghi champignon</span></p>
             </div>
             <br>
@@ -331,6 +336,16 @@
             </div>
             <br>
             <div class="pietanza">
+                <p><b><span>Calzone fritto napoletano</span><span>8,00€</span></b></p>
+                <p><span class="color-pietanza">Cicoli, ricotta, provola affumicata</span></p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p><b><span>Calzone fritto napoletano rosso</span><span>8,00€</span></b></p>
+                <p><span class="color-pietanza">Cicoli, ricotta, provola affumicata, pomodoro</span></p>
+            </div>
+            <br>
+            <div class="pietanza">
                 <p><b><span>Calzone fritto</span><span>7,00€</span></b></p>
                 <p><span class="color-pietanza">Prosciutto cotto, ricotta, mozzarella, pomodoro</span></p>
             </div>
@@ -350,21 +365,31 @@
         <hr>
         <div class="container-menu">
             <br>
-            <div class="pietanza">
-                <p><b><span>Prosciutto crudo mozzarella e pomodorini</span> <span>7,00€</span></b></p>
+           <div class="pietanza">
+                <p><b><span>San Patrignano</span><span>7,00€</span></b></p>
+                <p><span class="color-pietanza">Prosciutto crudo, mozzarella, pomodorini</span></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Bresaola mozzarella rucola e scaglie diㅤ parmigiano</span> <span>8,00€</span></b></p>
+                <p><b><span>Brisval</span><span>8,00€</span></b></p>
+                <p><span class="color-pietanza">Bresaola, mozzarella, rucola,pomodorini,scaglie di parmigiano</span></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Salsiccia friarielli e provola</span> <span>7,00€</span></b></p>
+                <p><b><span>Baby</span><span>8,00€</span></b></p>
+                <p><span class="color-pietanza">Wurstel, patatine stick, provola, maionese</span></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Porchetta provola e patatine</span> <span>7,50€</span></b></p>
+                <p><b><span>Forenza</span><span>7,00€</span></b></p>
+                <p><span class="color-pietanza">Salsiccia, friarielli, provola</span></p>
             </div>
+            <br>
+            <div class="pietanza">
+                <p><b><span>Oriti</span><span>7,50€</span></b></p>
+                <p><span class="color-pietanza">Porchetta, provola, patatine, pomodoro</span></p>
+            </div>
+            <br>
         </div>
     </div>
 </section>
