--- a/menu.html
+++ b/menu.html
@@ -337,12 +337,12 @@
             <br>
             <div class="pietanza">
                 <p><b><span>Calzone fritto napoletano</span><span>8,00€</span></b></p>
-                <p><span class="color-pietanza">Cicoli, ricotta, provola affumicata</span></p>
+                <p><span class="color-pietanza">Cicoli, ricotta,pepe, provola affumicata</span></p>
             </div>
             <br>
             <div class="pietanza">
                 <p><b><span>Calzone fritto napoletano rosso</span><span>8,00€</span></b></p>
-                <p><span class="color-pietanza">Cicoli, ricotta, provola affumicata, pomodoro</span></p>
+                <p><span class="color-pietanza">Cicoli, ricotta,pepe, provola affumicata, pomodoro</span></p>
             </div>
             <br>
             <div class="pietanza">
