--- a/menu.html
+++ b/menu.html
@@ -283,7 +283,7 @@
         <hr>
         <div class="container-menu">
             <br>
-            div class="pietanza">
+            <div class="pietanza">
                 <p><b><span>Gianni</span><span>11€</span></b></p>
                 <p><span class="color-pietanza">Crema di tartufo, patate al forno,salame dolce,prosciutto cotto,funghi porcini, provola affumicata,origano, basilico e olio evo</span></p>
             </div>
