--- a/menu.html
+++ b/menu.html
@@ -228,6 +228,16 @@
                 <p><span class="color-pietanza">Patate al forno, provola, pancetta, funghi, crocchè, basilico e olio evo</span></p>
             </div>
             <br>
+            <div class="pietanza">
+                <p><b><span>Fungarella</span><span>6,50€</span></b></p>
+                <p><span class="color-pietanza">pomodoro, mozzarella, funghi champignon, origano, basilico e olio evo</span></p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p><b><span>Prosciutto cotto e funghi</span><span>7,00€</span></b></p>
+                <p><span class="color-pietanza">pomodoro, mozzarella,prosciutto cotto, funghi champignon, origano, basilico e olio evo</span></p>
+            </div>
+            <br>
              <div class="pietanza">
                 <p><b><span>Fiocco</span><span>7,50€</span></b></p>
                 <p><span class="color-pietanza">Mozzarella, vellutata di patate, prosciutto cotto, pepe, basilico e olio evo</span></p>
