--- a/menu.html
+++ b/menu.html
@@ -426,8 +426,18 @@
             </div>
             <br>
              <div class="pietanza">
-                <p><b><span >Estathè in lattina</span> <span>3,00€</span></b></p>
-            </div>
+                <p><b><span >Estathè in lattina</span> <span>3,00€</span></b></p>       
+ </div>
+        </div>
+    </div>
+</section>
+
+<section id="menu">
+    <div class="box">
+        <br>
+        <p class="title">BIRRE IN BOTTIGLIA</p>
+        <hr>
+        <div class="container-menu">
             <br>
             <div class="pietanza">
                 <p><b><span>Beck's 33 cl</span> <span>3,00€</span></b></p>
@@ -458,39 +468,113 @@
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Birra alla spina stella artois piccola</span> <span>3,00€</span></b></p>
+                <p><b><span>Leffe Rossa 33cl</span> <span>4,00€</span></b></p>
+            </div>
+            <br>
+ <div class="pietanza">
+                <p><b><span>Leffe Rossa 75cl</span> <span>8,00€</span></b></p>
+            </div>
+            <br>
+<div class="pietanza">
+                <p><b><span>Birra artigianale bionda 75cl</span> <span>13,00€</span></b></p>
+            </div>
+            <br>
+    <div class="pietanza">
+                <p><b><span>Birra artigianale rossa 75cl</span> <span>13,00€</span></b></p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="menu">
+    <div class="box">
+        <br>
+        <p class="title">Birre alla spina</p>
+        <hr>
+        <div class="container-menu">
+            <br>
+            <div class="pietanza">
+                <p><b><span>Stella artois piccola</span> <span>3,00€</span></b></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Birra alla spina stella artois grande</span> <span>5,00€</span></b></p>
+                <p><b><span> Stella artois grande </span> <span>5,00€</span></b></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Birra alla spina leffe rossa piccola</span> <span>3,00€</span></b></p>
+                <p><b><span>Leffe rossa piccola</span> <span>4,00€</span></b></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Birra alla spina leffe rossa grande</span> <span>5,00€</span></b></p>
+                <p><b><span> Leffe rossa grande</span> <span>7,00€</span></b></p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="menu">
+    <div class="box">
+        <br>
+        <p class="title">Cantina</p>
+        <hr>
+        <div class="container-menu">
+            <br>
+            <div class="pietanza">
+                <p><b><span>Vino Bianco frizzante Pizza Wine bott.0,75 cl</span> <span>12,00€</span></b></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Vino bianco frizzante Pizza Wine bott. 0,75 cl</span> <span>12,00€</span></b></p>
+                <p><b><span> Vino rosso Gragnano bott. 0,75 cl </span> <span>15,00€</span></b></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Vino rosso frizzante Gragnano bott. 0,75 cl</span> <span>15,00€</span></b></p>
+                <p><b><span>Falanghina</span> <span>15,00€</span></b></p>
             </div>
+            <br>
+<div class="pietanza">
+                <p><b><span>Greco di tufo</span> <span>15,00€</span></b></p>
+            </div>
+            <br>
+<div class="pietanza">
+                <p><b><span>Aglianico</span> <span>20,00€</span></b></p>
+            </div>
+            <br>
+<div class="pietanza">
+                <p><b><span>Fiano di Avellino</span> <span>30,00€</span></b></p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p><b><span> Greco di tufo</span> <span>15,00€</span></b></p>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="menu">
+    <div class="box">
+        <br>
+        <p class="title">Bar</p>
+        <hr>
+        <div class="container-menu">
             <br>
             <div class="pietanza">
                 <p><b><span>Caffè</span> <span>1,50€</span></b></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Liquori/Amari</span> <span>3,00€</span></b></p>
+                <p><b><span> Liquore </span> <span>3€</span></b></p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p><b><span>Amaro</span> <span>3€</span></b></p>
+            </div>
+            <br>
+<div class="pietanza">
+                <p><b><span>Grappa</span> <span>4€</span></b></p>
             </div>
         </div>
     </div>
 </section>
+
 
     <section id="menu">
     <div class="box">
