--- a/menu.html
+++ b/menu.html
@@ -35,7 +35,7 @@
 <section id="max">
     <section id="menu">
         <div class="box">
-            <p class="title">Antipasti & Fritti</p>
+            <p class="title">ANTIPASTI E FRITTI</p>
             <hr>
             <div class="container-menu">
                 <br>
@@ -86,7 +86,7 @@
    <section id="menu">
     <div class="box">
         <br>
-        <p class="title">Le Patatine</p>
+        <p class="title">LE PATATINE</p>
         <hr>
         <div class="container-menu">
             <br>
@@ -117,7 +117,7 @@
 <section id="menu">
     <div class="box">
         <br>
-        <p class="title">Le Montanare</p>
+        <p class="title">LE MONTANARE</p>
         <hr>
         <div class="container-menu">
             <br>
@@ -144,7 +144,7 @@
 <section id="menu">
     <div class="box">
         <br>
-        <p class="title">Le nostre Pizze Classiche</p>
+        <p class="title">LE NOSTRE PIZZE CLASSICHE</p>
         <hr>
         <div class="container-menu">
             <br>
@@ -289,7 +289,7 @@
    <section id="menu">
     <div class="box">
         <br>
-        <p class="title">Le Pizze della Famiglia</p>
+        <p class="title">LE PIZZE DELLA FAMIGLIA</p>
         <hr>
         <div class="container-menu">
             <br>
@@ -329,7 +329,7 @@
 <section id="menu">
     <div class="box">
         <br>
-        <p class="title">Ripieni</p>
+        <p class="title">RIPIENI</p>
         <hr>
         <div class="container-menu">
             <br>
@@ -364,7 +364,7 @@
 <section id="menu">
     <div class="box">
         <br>
-        <p class="title">Saltimbocca</p>
+        <p class="title">SALTIMBOCCA</p>
         <hr>
         <div class="container-menu">
             <br>
@@ -401,7 +401,7 @@
 <section id="menu">
     <div class="box">
         <br>
-        <p class="title">Bibite</p>
+        <p class="title">BIBITE</p>
         <hr>
         <div class="container-menu">
             <br>
@@ -489,7 +489,7 @@
 <section id="menu">
     <div class="box">
         <br>
-        <p class="title">Birre alla spina</p>
+        <p class="title">BIRRE ALLA SPINA</p>
         <hr>
         <div class="container-menu">
             <br>
@@ -515,7 +515,7 @@
 <section id="menu">
     <div class="box">
         <br>
-        <p class="title">Cantina</p>
+        <p class="title">CANTINA</p>
         <hr>
         <div class="container-menu">
             <br>
@@ -552,7 +552,7 @@
 <section id="menu">
     <div class="box">
         <br>
-        <p class="title">Bar</p>
+        <p class="title">BAR</p>
         <hr>
         <div class="container-menu">
             <br>
@@ -579,7 +579,7 @@
     <section id="menu">
     <div class="box">
         <br>
-        <p class="title">Dolci</p>
+        <p class="title">DOLCI</p>
         <hr>
         <div class="container-menu">
             <br>
@@ -614,7 +614,7 @@
 <section id="menu">
     <div class="box">
         <br>
-        <p class="title">Coperto</p>
+        <p class="title">COPERTO</p>
         <hr>
         <div class="container-menu">
             <br>
