--- a/menu.html
+++ b/menu.html
@@ -634,7 +634,7 @@
             <p>
                 Dalia-Valori di Famiglia © 2024, TUTTI I DIRITTI RISERVATI
             </p>
-            <p>SITO WEB SVILUPPATO DA: <span class="color">ANTONIO MARGIO</span></p>
+            <p>SITO WEB SVILUPPATO DA: <span class="color">ANTONIO MARGIO & SIMONE LAURI</span></p>
         </div>
     </footer>
 
