--- a/menu.html
+++ b/menu.html
@@ -544,7 +544,7 @@
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span> Greco di tufo</span> <span>15,00€</span></b></p>
+                <p><b><span> Taurasi</span> <span>25,00€</span></b></p>
             </div>
         </div>
     </div>
