--- a/menu.html
+++ b/menu.html
@@ -172,7 +172,7 @@
             <br>
               <div class="pietanza">
                 <p><b><span>Siciliana</span><span>6,00€</span></b></p>
-                <p><span class="color-pietanza">Pomodoro, mozzarella,melanzane basilico e olio evo</span></p>
+                <p><span class="color-pietanza">Pomodoro, mozzarella,melanzane, basilico e olio evo</span></p>
             </div>
             <br>
             <div class="pietanza">
@@ -212,11 +212,11 @@
             <br>
              <div class="pietanza">
                 <p><b><span>Mimosa</span><span>7,00€</span></b></p>
-                <p><span class="color-pietanza">Panna, mais, prosciutto, cotto, basilico e olio evo</span></p>
+                <p><span class="color-pietanza">Panna, mais, prosciutto cotto, basilico e olio evo</span></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Salsiccia e friarielli</span><span>8,00€</span></b></p>
+                <p><b><span>Salsiccia e Friarielli</span><span>8,00€</span></b></p>
                 <p><span class="color-pietanza">Mozzarella, salsiccia, friarielli e olio evo</span></p>
             </div>
             <br>
@@ -227,12 +227,12 @@
             <br>
             <div class="pietanza">
                 <p><b><span>Fungarella</span><span>6,50€</span></b></p>
-                <p><span class="color-pietanza">pomodoro, mozzarella, funghi champignon, origano, basilico e olio evo</span></p>
+                <p><span class="color-pietanza">Pomodoro, mozzarella, funghi champignon, origano, basilico e olio evo</span></p>
             </div>
             <br>
             <div class="pietanza">
                 <p><b><span>Prosciutto cotto e funghi</span><span>7,00€</span></b></p>
-                <p><span class="color-pietanza">pomodoro, mozzarella,prosciutto cotto, funghi champignon, origano, basilico e olio evo</span></p>
+                <p><span class="color-pietanza">Pomodoro, mozzarella, prosciutto cotto, funghi champignon, origano, basilico e olio evo</span></p>
             </div>
             <br>
              <div class="pietanza">
