--- a/menu.html
+++ b/menu.html
@@ -90,19 +90,24 @@
         <hr>
         <div class="container-menu">
             <div class="pietanza">
-                <p><b><span>Patatina fritta stick</span> <span>3,00€</span></b></p>
+                <p><b><span>Patatina fritta stick piccola</span> <span>3,00€</span></b></p>
+            </div>
+            <br>
+             <div class="container-menu">
+            <div class="pietanza">
+                <p><b><span>Patatina fritta stick grande</span> <span>5,00€</span></b></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Patatina fritta dippers</span> <span>4,00€</span></b></p>
+                <p><b><span>Patatina fritta dippers</span> <span>5,00€</span></b></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Patatina fritta chips</span> <span>4,00€</span></b></p>
+                <p><b><span>Patatina fritta chips</span> <span>5,00€</span></b></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Patatina fritta con Wurstel e Cheddar</span> <span>5,00€</span></b></p>
+                <p><b><span>Patatina fritta con Wurstel e Cheddar</span> <span>6,00€</span></b></p>
             </div>
             <br>
             <div class="pietanza">
