--- a/menu.html
+++ b/menu.html
@@ -52,6 +52,10 @@
                 </div>
                 <br>
                 <div class="pietanza">
+                    <p><b><span>Fritto misto dalia</span> <span>7,00€</span></b></p>
+                </div>
+                <br>
+                <div class="pietanza">
                     <p><b><span>Frittatina cacio e pepe </span> <span>3,00€</span></b></p>
                 </div>
                 <br>
@@ -69,6 +73,14 @@
                 <br>
                 <div class="pietanza">
                     <p><b><span>Crocchettone mortadella e pistacchio</span> <span>4,00€</span></b></p>
+                </div>
+                <br>
+                <div class="pietanza">
+                    <p><b><span>Crocchettone bacon e cheddar</span> <span>4,00€</span></b></p>
+                </div>
+                <br>
+                <div class="pietanza">
+                    <p><b><span>Crocchettone porcini e tartufo con scaglie di parmigiano</span> <span>5,00€</span></b></p>
                 </div>
                 <br>
                 <div class="pietanza">
@@ -291,7 +303,7 @@
    <section id="menu">
     <div class="box">
         <br>
-        <p class="title">LE PIZZE DELLA FAMIGLIA</p>
+        <p class="title">LE PIZZE A NOI DEDICATE</p>
         <hr>
         <div class="container-menu">
             <div class="pietanza">
@@ -540,6 +552,12 @@
             <br>
             <div class="pietanza">
                 <p><b><span>Taurasi</span> <span>30,00€</span></b></p>
+            </div>
+            <div class="pietanza">
+                <p><b><span>Vino in bicchiere rosso</span> <span>4,00€</span></b></p>
+            </div>
+            <div class="pietanza">
+                <p><b><span>Vino in bicchiere bianco</span> <span>4,00€</span></b></p>
             </div>
         </div>
     </div>
