--- a/menu.html
+++ b/menu.html
@@ -36,7 +36,7 @@
     <section id="menu">
         <div class="box">
             <br>
-            <p class="title">ANTIPASTI E FRITTI</p>
+            <p class="title">ANTIPASTI</p>
             <hr>
             <div class="container-menu">
                 <div class="pietanza">
@@ -46,13 +46,22 @@
                 <div class="pietanza">
                     <p><b><span>Prosciutto crudo e mozzarella di bufala</span> <span>10,00€</span></b></p>
                 </div>
-                <br>
-                <div class="pietanza">
-                    <p><b><span>Frittatina classica </span> <span>3,00€</span></b></p>
+<div class="pietanza">
+                    <p><b><span>Antipasto all’italiana</span> <span>10,00€</span></b></p>
                 </div>
-                <br>
-                <div class="pietanza">
-                    <p><b><span>Fritto misto dalia</span> <span>7,00€</span></b></p>
+            </div>
+        </div>
+   </section>
+
+<section id="max">
+    <section id="menu">
+        <div class="box">
+            <br>
+            <p class="title">LE NOSTRE FRITTURE</p>
+            <hr>
+            <div class="container-menu">
+           <div class="pietanza">
+                    <p><b><span>Frittatina classica </span> <span>3,00€</span></b></p>
                 </div>
                 <br>
                 <div class="pietanza">
@@ -89,19 +98,11 @@
                 <br>
                 <div class="pietanza">
                     <p><b><span>Arancino classico</span> <span>2,00€</span></b></p>
+<div class="pietanza">
+                    <p><b><span>Fritto misto dalia</span> <span>7,00€</span></b></p>
                 </div>
-            </div>
-        </div>
-   </section>
-
-
-   <section id="menu">
-    <div class="box">
-        <br>
-        <p class="title">LE PATATINE</p>
-        <hr>
-        <div class="container-menu">
-            <div class="pietanza">
+                <br>
+	<div class="pietanza">
                 <p><b><span>Patatina fritta stick piccola</span> <span>3,00€</span></b></p>
             </div>
             <br>
@@ -128,6 +129,7 @@
         </div>
     </div>
 </section>
+
 
 
 <section id="menu">
