--- a/menu.html
+++ b/menu.html
@@ -308,19 +308,24 @@
         <p class="title">LE PIZZE A NOI DEDICATE</p>
         <hr>
         <div class="container-menu">
-            <div class="pietanza">
-                <p><b><span>Gianni</span><span>11,00€</span></b></p>
-                <p><span class="color-pietanza">Crema di tartufo, patate al forno, salame dolce, prosciutto cotto, funghi porcini, provola affumicata, origano, basilico e olio evo</span></p>
-            </div>
-            <br>
-            <div class="pietanza">
+		<div class="pietanza">
                 <p><b><span>Dalia</span><span>10,00€</span></b></p>
                 <p><span class="color-pietanza">Crema di tartufo, salsiccia, patate al forno, funghi porcini, provola, basilico e olio evo</span></p>
             </div>
             <br>
             <div class="pietanza">
+                <p><b><span>Gianni</span><span>11,00€</span></b></p>
+                <p><span class="color-pietanza">Crema di tartufo, patate al forno, salame dolce, prosciutto cotto, funghi porcini, provola affumicata, origano, basilico e olio evo</span></p>
+            </div>
+            <br>
+		<div class="pietanza">
+                <p><b><span>Nonna Margherita</span><span>10,00€</span></b></p>
+                <p><span class="color-pietanza">Provola, datterino giallo, datterino rosso, speck, basilico e olio evo</span></p>
+            </div>
+            <br>
+            <div class="pietanza">
                 <p><b><span>Anthony</span><span>9,00€</span></b></p>
-                <p><span class="color-pietanza">Provola, patate al forno, salsiccia funghi champignon</span></p>
+                <p><span class="color-pietanza">Provola, patate al forno, salsiccia, funghi champignon, basilico e olio evo</span></p>
             </div>
             <br>
             <div class="pietanza">
@@ -336,6 +341,11 @@
             <div class="pietanza">
                 <p><b><span>Nonno Vincenzo</span><span>9,00€</span></b></p>
                 <p><span class="color-pietanza">Pomodoro, mozzarella, salsiccia, funghi porcini, provola affumicata, pepe, basilico e olio evo</span></p>
+            </div>
+		<br>
+            <div class="pietanza">
+                <p><b><span>Onna Rosa</span><span>9,00€</span></b></p>
+                <p><span class="color-pietanza">Provola, pancetta, funghi porcini, chips di zucchine, basilico e olio evo</span></p>
             </div>
         </div>
     </div>
@@ -353,17 +363,17 @@
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Calzone fritto napoletano</span><span>9,00€</span></b></p>
+                <p><b><span>Calzone fritto napoletano</span><span>10,00€</span></b></p>
                 <p><span class="color-pietanza">Cicoli, ricotta,pepe, provola affumicata</span></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Calzone fritto napoletano rosso</span><span>9,00€</span></b></p>
+                <p><b><span>Calzone fritto napoletano rosso</span><span>10,00€</span></b></p>
                 <p><span class="color-pietanza">Cicoli, ricotta,pepe, provola affumicata, pomodoro</span></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Calzone fritto</span><span>8,00€</span></b></p>
+                <p><b><span>Calzone fritto</span><span>9,00€</span></b></p>
                 <p><span class="color-pietanza">Prosciutto cotto, ricotta, mozzarella, pomodoro</span></p>
             </div>
             <br>
@@ -381,6 +391,11 @@
         <p class="title">SALTIMBOCCA</p>
         <hr>
         <div class="container-menu">
+		<div class="pietanza">
+                <p><b><span>Irpino</span><span>10,00€</span></b></p>
+                <p><span class="color-pietanza">Crema di tartufo, provola affumicata, funghi porcini, patate al forno</span></p>
+            </div>
+            <br>
            <div class="pietanza">
                 <p><b><span>San Patrignano</span><span>8,00€</span></b></p>
                 <p><span class="color-pietanza">Prosciutto crudo, mozzarella, pomodorini</span></p>
