--- a/menu.html
+++ b/menu.html
@@ -590,11 +590,19 @@
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span> Liquore </span> <span>3,00€</span></b></p>
+                <p><b><span>Amaro</span> <span>3,00€</span></b></p>
             </div>
             <br>
-            <div class="pietanza">
-                <p><b><span>Amaro</span> <span>3,00€</span></b></p>
+		 <div class="pietanza">
+                <p><b><span> Limoncello </span> <span>3,00€</span></b></p>
+            </div>
+            <br>
+		 <div class="pietanza">
+                <p><b><span> Meloncello </span> <span>3,00€</span></b></p>
+            </div>
+            <br>
+		 <div class="pietanza">
+                <p><b><span> Liquirizia </span> <span>3,00€</span></b></p>
             </div>
             <br>
             <div class="pietanza">
