--- a/menu.html
+++ b/menu.html
@@ -645,7 +645,22 @@
     </div>
 </section>
 
-
+<section id="menu">
+    <div class="box">
+        <br>
+        <p class="title">GELATI CON LATTE DI BUFALA</p>
+        <hr>
+        <div class="container-menu">
+            <div class="pietanza">
+                <p><b><span>Tartufi</span> <span>5,00€</span></b></p>
+                <p><span class="color-pietanza">Nocciotella / Fior di bufala / Zabaione della nonna</span></p>
+            </div>
+            <br>
+              <div class="pietanza">
+                <p><b><span>Vasetti</span> <span>6,00€</span></b></p>
+                <p><span class="color-pietanza">Al babà/ al tiramisù</span></p>
+            </div>
+            <br>		    
 <section id="menu">
     <div class="box">
         <br>
