--- a/menu.html
+++ b/menu.html
@@ -681,6 +681,13 @@
 </section>
 </section>
 
+	<footer>
+        <div class="foot">
+            <p>
+                Dalia-Valori di Famiglia © 2024, TUTTI I DIRITTI RISERVATI
+            </p>
+        </div>
+    </footer>
 
 </body>
 </html>
