--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
             <p>
                 Dalia-Valori di Famiglia © 2024, TUTTI I DIRITTI RISERVATI
             </p>
+
+            <div class="document">
+                <a href="./doc/Cookie_Policy.pdf" target="_blank" class="cookie">Cookie Policy</a>
+            </div>
         </div>
     </footer>
 
