--- a/menu.html
+++ b/menu.html
@@ -231,7 +231,7 @@
             <br>
              <div class="pietanza">
                 <p><b><span>Ortolana</span><span>8,00€</span></b></p>
-                <p><span class="color-pietanza">Peperoni, zucchine, melanzane, mozzarella, basilico e olio evo</span></p>
+                <p><span class="color-pietanza">Peperoni, crema di zucchine, zucchine, melanzane, mozzarella, basilico e olio evo</span></p>
             </div>
             <br>
              <div class="pietanza">
@@ -266,7 +266,7 @@
             <br>
             <div class="pietanza">
                 <p><b><span>Quattro Formaggi</span><span>9,00€</span></b></p>
-                <p><span class="color-pietanza">Caciocavallo, gorgonzola, emmenthal, parmigiano, basilico e olio evo</span></p>
+                <p><span class="color-pietanza">Caciocavallo, provola affumicata, gorgonzola, emmenthal, parmigiano, basilico e olio evo</span></p>
             </div>
             <br>
              <div class="pietanza">
